--- a/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -10,7 +10,7 @@
 	<!-- Nome que aparecerá na aba do navegador para o usuário -->
     <title>Ivam Banhara</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <!-- <h:outputStylesheet name="css/screen.css" />  -->
+    <h:outputStylesheet name="css/screen2.css" /> 
 </h:head>
 <h:body>
     <div id="container">
