--- a/projeto/src/main/webapp/resources/css/screen2.css
+++ b/projeto/src/main/webapp/resources/css/screen2.css
@@ -16,20 +16,23 @@
  */
 /* Core styles for the page */
 
-body {
+body
+{
   font-family: Arial, sans-serif;
   background-color: #f2f2f2;
   margin: 0;
 }
 
-.container {
+.container
+{
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
 
-.login-form {
+.login-form
+{
   width: 300px;
   position: relative;
   top: -50px;
@@ -39,188 +42,16 @@ body {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
+h1
+{
   text-align: center;
   font-size: 30px;
   margin-bottom: 20px;
 }
 
-label {
-  display: block;
-  margin-bottom: 10px;
-}
-
-input {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-}
-
-input[type="password"] {
-  -webkit-text-security: disc;
-  text-security: disc;
-}
-
-.login2 {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  background-color: #4823ad;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.login2:hover {
-  background-color: #43578d;
-}
-
-#header {
-  background-color: #333;
-  background-color: #4823ad;
-  color: #fff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-}
-
-.logo img {
-  height: 50px;
-}
-
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
-
-nav li {
-  margin: 0 10px;
-}
-
-nav a {
-  color: #fff;
-  text-decoration: none;
-}
-
-nav a:hover {
-  text-decoration: underline;
-}
-
-.content2 {
-  text-align: center;
-  margin-top: 50px;
-}
-
-.buttons {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-}
-
-.buttons button {
-  background-color: #333;
-  background-color: #4823ad;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  margin: 0 10px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.buttons button:hover {
-  background-color: #fff;
-  color: #333;
-}
-
-.ui-panel, div.ui-state-hover {
-        margin: 10px;
-        width: 200px;
-}
-
-.ui-dashboard-column {
-        width: 220px;
-}
-
-.header {
-  background-color: #333;
-  background-color: #4823ad;
-  color: #fff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-}
-
-.logo img {
-  height: 50px;
-}
-
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
-
-nav li {
-  margin: 0 10px;
-}
-
-nav a {
-  color: #fff;
-  text-decoration: none;
-}
-
-nav a:hover {
-  text-decoration: underline;
-}
-
-.menuContent {
-  text-align: center;
-  margin-top: 50px;
-}
-
-.buttons {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-}
-
-.buttons button {
-  background-color: #333;
-  background-color: #4823ad;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  margin: 0 10px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.buttons button:hover {
-  background-color: #fff;
-  color: #333;
-}
-
-.login2 {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  background-color: #4823ad;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.login2:hover {
-  background-color: #43578d;
+.pLogin
+{
+	margin: 0;
+	padding: 0;
+	display: inline-block;
 }
